--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/semantic-ui-css/semantic.min.css';
+@import './app/vendor/semantic.min.css';
 
 .dark-theme-background {
     background-color: rgb(28,28,30);
