dynamic-type component is finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <div>
-  <div class="ui three buttons dark-theme">
-    <button class="ui button">One</button>
-    <button class="ui button">Two</button>
-    <button class="ui button">Three</button>
-  </div>
-  <div class="{{ theme }}">
-    <h1>Hi I'm Gabi</h1>
-  </div>
+  <h1 class="header-text">Hi I'm Gabi</h1>
+  <dynamic-type [words]=words [delta]=delta [pauseAfterWord]=1000></dynamic-type>
 </div>
