--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <h1 class="header-text">Hi I'm Gabi</h1>
-  <dynamic-type [words]=words [delta]=delta [pauseAfterWord]=1000></dynamic-type>
+  <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
 </div>
