--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "./app/vendor/semantic.min.css";
+@import "./assets/vendor/semantic.min.css";
 
 html,
 body {
