added a new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <rotative-text></rotative-text>
   <h1 class="header-text">Hi, I'm Gabi</h1>
   <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
 </div>
