--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1 class="header-text">Hi, I'm Gabi</h1>
-  <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
-  <p *ngFor="let repo of repos">{{repo.full_name}}</p>
+  <dynamic-type [words]="[]" [speed]="delta" [pause]="1000"></dynamic-type>
+  <!-- <p *ngFor="let repo of repos">{{repo.full_name}}</p> -->
 </div>
