updated the design again :-)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,8 @@
-<div class="ui grid">
-  <div class="two small column"></div>
-  <div class="ten wide column">
-
-    <h1 class="header-text">Hi, I'm Gabi</h1>
-    <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
-    <!-- <p *ngFor="let repo of repos">{{repo.full_name}}</p> -->
-    <h4 class="normal-text">
-      <typing [word]="word" [id]="'test-id'" [speed]="125"></typing>
-    </h4>
-
-  </div>
-  <div class="two small column"></div>
+<div>
+  <h1 class="header-text">Hi, I'm Gabi</h1>
+  <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
+  <!-- <p *ngFor="let repo of repos">{{repo.full_name}}</p> -->
+  <h4 class="normal-text">
+    <typing [word]="word" [id]="'test-id'" [speed]="125"></typing>
+  </h4>
 </div>
-
-<!-- <div class="ui card">
-  <div class="content">
-    <div class="header">Cute Dog</div>
-    <div class="meta">2 days ago</div>
-    <div class="description">
-      <p>Cute dogs come in a variety of shapes and sizes. Some cute dogs are cute for their adorable faces, others for their tiny stature, and even others for their massive size.</p>
-      <p>Many people also have their own barometers for what makes a cute dog.</p>
-    </div>
-  </div>
-</div> -->
