updated the links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
     <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
   </div>
 </div>
-
 <div class="row">
   <div class="four wide collumn"></div>
   <div class="four wide collumn">
@@ -12,7 +11,7 @@
     <div class="four small column">
       <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="blue facebook f icon"></i></a>
       <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
-      <a href=""><i class="blue linkedin icon"></i></a>
+      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="blue linkedin icon"></i></a>
     </div>
     <div class="four small column"></div>
   </div>
