tested some designs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,57 @@
     <div class="four small column">
       <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="blue facebook f icon"></i></a>
       <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
-      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="blue linkedin icon"></i></a>
+      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
+          class="blue linkedin icon"></i></a>
     </div>
     <div class="four small column"></div>
   </div>
   <div class="four wide collumn"></div>
 </div>
+<!-- 
+<div class="ui two column grid">
+  <div class="column">
+    <div class="ui raised segment">
+      <a class="ui red ribbon label">Overview</a>
+      <span>Account Details</span>
+      <p></p>
+      <a class="ui blue ribbon label">Community</a> User Reviews
+      <p></p>
+    </div>
+  </div>
+</div>
+
+<div class="ui inverted card">
+  <div class="inverted content">
+    <div class="header">Project Timeline</div>
+  </div>
+  <div class=" inverted content">
+    <h4 class="ui sub header">Activity</h4>
+    <div class="ui small feed">
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Elliot Fu</a> added <a>Jenny Hess</a> to the project
+          </div>
+        </div>
+      </div>
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Stevie Feliciano</a> was added as an <a>Administrator</a>
+          </div>
+        </div>
+      </div>
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Helen Troy</a> added two pictures
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="extra content">
+    <button class="ui button">Join Project</button>
+  </div>
+</div> -->
