--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,7 @@
-<div class="row">
-  <div class="twelve column">
-    <h1 class="header-text">Hi, I'm Gabi</h1>
-    <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
-  </div>
-</div>
-<div class="row">
-  <div class="four wide collumn"></div>
-  <div class="four wide collumn">
-    <div class="four small column"></div>
-    <div class="four small column">
-      <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="blue facebook f icon"></i></a>
-      <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
-      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
-          class="blue linkedin icon"></i></a>
-    </div>
-    <div class="four small column"></div>
-  </div>
-  <div class="four wide collumn"></div>
-</div>
+
+
+
+<router-outlet></router-outlet>
 <!-- 
 <div class="ui two column grid">
   <div class="column">
