--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,7 @@ li:hover {
   font-style: italic !important;
 }
 
-span {
+span.cursor {
   border-right: .15em solid;
   animation: caret 1s steps(1) infinite;
   font-size: 80%;
