changed the color of the links

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,31 +1,29 @@
 <div class="row">
     <div class="twelve column">
-      <h1 class="header-text">Hi, I'm Gabi</h1>
-      <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
+        <h1 class="header-text">Hi, I'm Gabi</h1>
+        <dynamic-type [words]="words" [speed]="delta" [pause]="1000"></dynamic-type>
     </div>
-  </div>
-  <div class="row">
+</div>
+<div class="row">
     <div class="four wide collumn"></div>
     <div class="four wide collumn">
-      <div class="four small column"></div>
-      <div class="four small column">
-        <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="inverted facebook f icon"></i></a>
-        <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
-        <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
-            class="inverted linkedin icon"></i></a>
-      </div>
-      <div class="four small column"></div>
+        <div class="four small column"></div>
+        <div class="four small column">
+            <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="inverted facebook f icon"></i></a>
+            <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
+            <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
+                    class="inverted linkedin icon"></i></a>
+        </div>
+        <div class="four small column"></div>
     </div>
     <div class="four wide collumn"></div>
-  </div>
-  <div class="row">
-    <div class="four three wide column"></div>
-    <div class="four three wide column">
+</div>
+<div class="row">
+    <div class="three wide column"></div>
+    <div class="three wide column">
         <a class="inverted" routerLink="/projects">Projects</a>
-        <span style="min-width: 10px;"></span>
-        <a class="inverted" routerLink="/experience">Experience</a>
-        <span style="min-width: 10px;"></span>
-        <a class="inverted" routerLink="/education">Education</a> 
+        <a style="padding: 15px;" class="inverted" routerLink="/experience">Experience</a>
+        <a class="inverted" routerLink="/education">Education</a>
     </div>
-    <div class="four three wide column"></div>
-  </div>
+    <div class="three wide column"></div>
+</div>
