--- a/src/app/pages/welcome/welcome.component.css
+++ b/src/app/pages/welcome/welcome.component.css
@@ -1,11 +1,11 @@
 /* unvisited link */
 a:link {
-    color: red;
+    color: rgb(255, 214, 0);
   }
   
   /* visited link */
   a:visited {
-    color: green;
+    color: rgb(255, 214, 0);
   }
   
   /* mouse over link */
@@ -15,5 +15,5 @@ a:link {
   
   /* selected link */
   a:active {
-    color: blue;
+    color: rgb(255, 214, 0);
   }
