added the project model

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,15 @@
-<p>projects works!</p>
+<div class="row">
+    <div class="four wide column"></div>
+    <div class="four wide column">
+        <h1>
+            <typing [word]="title" [speed]="speed"></typing>
+        </h1>
+    </div>
+    <div class="four wide column"></div>
+</div>
+
+<div class="row">
+    <div class="four wide column"></div>
+    <div class="four wide column"></div>
+    <div class="four wide column"></div>
+</div>
