--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,7 @@ li:hover {
   font-style: italic !important;
 }
 
-span.cursor {
+span {
   border-right: .15em solid;
   animation: caret 1s steps(1) infinite;
   font-size: 80%;
