finished the project model

--- a/src/app/components/typing/typing.component.css
+++ b/src/app/components/typing/typing.component.css
@@ -1,5 +1,5 @@
-span {
-    border-right: .05em solid;
+span.cursor{
+    border-right: 5% solid;
     animation: caret 1s steps(1) infinite;
   }
   
