--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="four wide column"></div>
     <div class="four wide column">
-        <h1>
-            <typing [word]="title" [speed]="speed"></typing>
+        <h1 class="header-text">
+            <typing [word]="title" [speed]="speed" [id]="title"></typing>
         </h1>
     </div>
     <div class="four wide column"></div>
@@ -10,6 +10,8 @@
 
 <div class="row">
     <div class="four wide column"></div>
-    <div class="four wide column"></div>
+    <div class="four wide column">
+        <project></project>
+    </div>
     <div class="four wide column"></div>
 </div>
