--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -22,6 +22,7 @@
     <div class="three wide column"></div>
     <div class="three wide column">
         <a class="inverted" routerLink="/projects">Projects</a>
+        <span></span>
         <a style="padding: 15px;" class="inverted" routerLink="/experience">Experience</a>
         <a class="inverted" routerLink="/education">Education</a>
     </div>
