--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,1 +1,47 @@
-<
+
+<div class="ui two column grid">
+  <div class="column">
+    <div class="ui raised segment">
+      <a class="ui red ribbon label">Overview</a>
+      <span>Account Details</span>
+      <p></p>
+      <a class="ui blue ribbon label">Community</a> User Reviews
+      <p></p>
+    </div>
+  </div>
+</div>
+
+<div class="ui inverted card">
+  <div class="inverted content">
+    <div class="header">Project Timeline</div>
+  </div>
+  <div class=" inverted content">
+    <h4 class="ui sub header">Activity</h4>
+    <div class="ui small feed">
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Elliot Fu</a> added <a>Jenny Hess</a> to the project
+          </div>
+        </div>
+      </div>
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Stevie Feliciano</a> was added as an <a>Administrator</a>
+          </div>
+        </div>
+      </div>
+      <div class="event">
+        <div class="content">
+          <div class="summary">
+            <a>Helen Troy</a> added two pictures
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="extra content">
+    <button class="ui button">Join Project</button>
+  </div>
+</div>
