updated the styles

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -11,11 +11,11 @@
   </div>
 </div>
 
-<div class="ui inverted card">
-  <div class="inverted content">
+<div class="ui card">
+  <div class=" content">
     <div class="header">Project Timeline</div>
   </div>
-  <div class=" inverted content">
+  <div class=" content">
     <h4 class="ui sub header">Activity</h4>
     <div class="ui small feed">
       <div class="event">
