--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,17 +1,15 @@
-<div class="row">
-    <div class="four wide column"></div>
-    <div class="four wide column">
-        <h1 class="header-text">
-            <typing [word]="title" [speed]="speed" [id]="title"></typing>
-        </h1>
-    </div>
-    <div class="four wide column"></div>
-</div>
 
-<div class="row">
-    <div class="four wide column"></div>
-    <div class="four wide column">
-        <project></project>
+    <div class="row">
+        <div class="four wide column"></div>
+        <div class="four wide column">
+            <h1 class="header-text">
+                <typing [word]="title" [speed]="speed" [id]="title"></typing>
+            </h1>
+        </div>
+        <div class="four wide column"></div>
     </div>
-    <div class="four wide column"></div>
-</div>
+
+    <div class="ui link cards">
+        <project *ngFor="let project of projects" [project]="project"></project>
+
+    </div>
