--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,11 +1,21 @@
-<div class="card">
+
+
+<div class="ui card">
     <div class="content">
-        <div class="header">{{project.name}}</div>
-        <div class="meta">
-            <a>Friens</a>
-        </div>
-        <div class="description">
-            {{project.description}}
-        </div>
+      <div class="header">{{project.name}}</div>
     </div>
-</div>
+    <div class="content">
+      <div class="ui small feed">
+        <div class="event">
+          <div class="content">
+            <div class="summary">
+               {{project.description}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="extra content">
+      <a href="{{project.html_url}}"><button class="ui button"><i class="icon github"></i>Github</button></a>
+    </div>
+  </div>
