--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,5 +1,5 @@
-
-    <div class="row">
+<div class="row">
+    <div class="ui four column grid">
         <div class="four wide column"></div>
         <div class="four wide column">
             <h1 class="header-text">
@@ -8,8 +8,28 @@
         </div>
         <div class="four wide column"></div>
     </div>
-
-    <div class="ui link cards">
-        <project *ngFor="let project of projects" [project]="project"></project>
-
+</div>
+<div class="row">
+    <div class="ui four column grid">
+        <div class="column">
+            <div class="ui segment">
+                <img>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui segment">
+                <img>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui segment">
+                <img>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui segment">
+                <img>
+            </div>
+        </div>
     </div>
+</div>
