updated the project component

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,6 +1,6 @@
-<div class="ui card">
+<div class="ui card" style="min-width: 600px;">
     <div class="content">
-      <div class="header">{{project.name}}</div>
+      <div class="header" style="overflow-wrap: normal;">{{project.name}}</div>
     </div>
     <div class="content">
       <div class="ui small feed">
