--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,34 +1,34 @@
 <div class="row">
-    <div class="ui four column grid">
-        <div class="four wide column"></div>
-        <div class="four wide column">
+    <div class="ui three column grid"></div>
+    <div class="row">
+        <div class="column"></div>
+        <div class="column">
             <h1 class="header-text">
                 <typing [word]="title" [speed]="speed" [id]="title"></typing>
             </h1>
         </div>
-        <div class="four wide column"></div>
+        <div class="column"></div>
     </div>
+
 </div>
+
+<!-- <div class="ui grid" style="overflow-y:auto;white-space:nowrap;">
+    <div class="content"></div>
+    <div class="content" *ngFor="let project of projects">
+        <project [project]="project"></project>
+    </div>
+  </div> -->
 <div class="row">
-    <div class="ui four column grid">
-        <div class="column">
-            <div class="ui segment">
-                <img>
+    <div class="ui three column grid">
+        <div class="row" *ngFor="let project of projects">
+            <div class="column">
+                <p></p>
             </div>
-        </div>
-        <div class="column">
-            <div class="ui segment">
-                <img>
+            <div class="column">
+                <project [project]="project"></project>
             </div>
-        </div>
-        <div class="column">
-            <div class="ui segment">
-                <img>
-            </div>
-        </div>
-        <div class="column">
-            <div class="ui segment">
-                <img>
+            <div class="column">
+                <p></p>
             </div>
         </div>
     </div>
