added the education service

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,6 +1,6 @@
-<div class="ui card" style="min-width: 600px;">
+<div class="ui card" style="min-width: auto;">
     <div class="content">
-      <div class="header" style="overflow-wrap: normal;">{{project.name}}</div>
+      <div class="header" style="word-wrap: break-word;">{{getNameOf(project)}}</div>
     </div>
     <div class="content">
       <div class="ui small feed">
