fixed bug on the welcome screen

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,16 +1,15 @@
+<div class="ui grid"></div>
 <div class="row">
-    <div class="ui three column grid"></div>
-    <div class="row">
-        <div class="column"></div>
-        <div class="column">
-            <h1 class="header-text">
-                <typing [word]="title" [speed]="speed" [id]="title"></typing>
-            </h1>
-        </div>
-        <div class="column"></div>
+    <div class="column"></div>
+    <div class="column">
+        <h1 class="header-text">
+            <typing [word]="title" [speed]="speed" [id]="title"></typing>
+        </h1>
     </div>
-
+    <div class="column"></div>
 </div>
+
+
 
 <!-- <div class="ui grid" style="overflow-y:auto;white-space:nowrap;">
     <div class="content"></div>
