--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<div class="ui sixteen column doubling stackable grid container" style="max-width: inherit;overflow-y: auto;max-height: inherit; padding: 0px; margin: 0px;">
+    <router-outlet></router-outlet>
+</div>
