--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,3 +1,4 @@
+<!-- <div class="container " style="overflow-y: auto; max-height: 500px;"> -->
 <div class="ui grid"></div>
 <div class="row">
     <div class="column"></div>
@@ -17,10 +18,9 @@
         <project [project]="project"></project>
     </div>
   </div> -->
-<div class="row">
-    <div class="collection">
-        <div class="item" *ngFor="let project of projects">
-            <project [project]="project"></project>
-        </div>
+<div class="container ">
+    <div class="ui link cards ">
+        <project *ngFor="let project of projects" [project]="project"></project>
+
     </div>
 </div>
