--- a/src/styles.css
+++ b/src/styles.css
@@ -96,3 +96,13 @@ span {
     border-color: transparent;
   }
 }
+
+.projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E6E6E6;
+  padding: 0;
+  border-radius: 5px;
+  margin: 10px;
+}
