fixed a ui bug on the welcome page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="ui sixteen column doubling stackable grid container" style="max-width: inherit;overflow-y: auto;max-height: inherit; padding: 0px; margin: 0px;">
+<div class="ui sixteen column doubling stackable grid" style="max-width: inherit;overflow-y: auto;max-height: inherit; padding: 0px; margin: 0px;">
     <router-outlet></router-outlet>
 </div>
