fixed a bug on the projects page

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,13 +1,14 @@
 <!-- <div class="container " style="overflow-y: auto; max-height: 500px;"> -->
-<div class="ui grid"></div>
+<div class="ui grid">
 <div class="row">
-    <div class="column"></div>
-    <div class="column">
+    <div class="four wide column"></div>
+    <div class="eight wide column">
         <h1 class="header-text">
             <typing [word]="title" [speed]="speed" [id]="title"></typing>
         </h1>
     </div>
-    <div class="column"></div>
+    <div class="four wide column"></div>
+</div>
 </div>
 
 
