--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,14 +1,14 @@
 <!-- <div class="container " style="overflow-y: auto; max-height: 500px;"> -->
 <div class="ui grid">
-<div class="row">
-    <div class="four wide column"></div>
-    <div class="eight wide column">
-        <h1 class="header-text">
-            <typing [word]="title" [speed]="speed" [id]="title"></typing>
-        </h1>
+    <div class="row">
+        <div class="four wide column"></div>
+        <div class="eight wide column">
+            <h1 class="header-text">
+                <typing [word]="title" [speed]="speed" [id]="title"></typing>
+            </h1>
+        </div>
+        <div class="four wide column"></div>
     </div>
-    <div class="four wide column"></div>
-</div>
 </div>
 
 
@@ -20,7 +20,14 @@
     </div>
   </div> -->
 
-<div class="ui link cards ">
-    <project *ngFor="let project of projects" [project]="project"></project>
-
+<div class="ui grid">
+    <div class="row">
+        <div class="four wide column"></div>
+        <div class="eight wide column">
+            <div class="ui cards">
+                <project *ngFor="let project of projects" [project]="project"></project>
+            </div>
+        </div>
+        <div class="four wide column"></div>
+    </div>
 </div>
