--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -22,12 +22,12 @@
 
 <div class="ui grid">
     <div class="row">
-        <div class="four wide column"></div>
+        <div class="five wide column"></div>
         <div class="eight wide column">
             <div class="ui cards">
                 <project *ngFor="let project of projects" [project]="project"></project>
             </div>
         </div>
-        <div class="four wide column"></div>
+        <div class="three wide column"></div>
     </div>
 </div>
