--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -20,7 +20,7 @@
     </div>
   </div> -->
 
-<div class="ui grid">
+<div *ngIf="ready" class="ui grid">
     <div class="row">
         <div class="five wide column"></div>
         <div class="eight wide column">
