--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -13,12 +13,12 @@
 
 <div *ngIf="ready" class="ui grid">
     <div class="row">
-        <div class="five wide column"></div>
-        <div class="eight wide column">
+        <div class="one wide column"></div>
+        <div class="fourteen wide column">
             <div class="ui cards">
                 <project *ngFor="let project of projects" [project]="project"></project>
             </div>
         </div>
-        <div class="three wide column"></div>
+        <!-- <div class="one wide column"></div> -->
     </div>
 </div>
