fixed the project alignment bug

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,13 +1,14 @@
 <!-- <div class="container " style="overflow-y: auto; max-height: 500px;"> -->
-<div class="ui grid" align="center">
-    <div class="row">
-        <div class="four wide column"></div>
-        <div class="eight wide column">
-            <h1 class="header-text">
+<div class="ui three column grid">
+    <div class="row sixteen wide column">
+        <div class="column"></div>
+        <div class="column">
+            <h1 class="header-text ">
                 <typing [word]="title" [speed]="speed" [id]="title" (ready)="showContent(ready)"></typing>
             </h1>
         </div>
-        <div class="four wide column"></div>
+        <div class="column"></div>
+
     </div>
 </div>
 
