--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -1,1 +1,37 @@
-<p>experience works!</p>
+<div class="ui list">
+  <div class="item">
+    <img class="ui avatar image"
+         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Canadian_Bank_Note_Company_logo.svg/1200px-Canadian_Bank_Note_Company_logo.svg.png">
+    <div class="content">
+      <a class="normal-text">Software Developer</a>
+      <div class="description normal-text">Last seen watching <a><b>Arrested Development</b></a> just now.
+        <div class="ui list">
+          <div class="item">
+            <div class="content">
+              <p class="normal-text">ceva</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="item">
+    <img class="ui avatar image"
+         src="https://upb.ro/wp-content/uploads/2018/03/facultatea_automatica_2018.jpg">
+    <div class="content">
+      <a class="normal-text">Software Developer</a>
+      <div class="description normal-text">Last seen watching <a><b>Arrested Development</b></a> just now.
+        <div class="ui list">
+          <div class="item">
+            <div class="content">
+              <p class="normal-text">ceva</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
