--- a/src/styles.css
+++ b/src/styles.css
@@ -118,5 +118,16 @@ span {
 
 .pad {
   padding: 10px;
-
+  margin: auto;
 }
+
+.resize {
+  font-size: 9vw;
+}
+/* 
+.spacing {
+  
+  /* width: 300px;
+  border: 3px solid #73AD21;
+  padding: 10px; */
+/* } */
