--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,1 +1,16 @@
-<p>experience works!</p>
+<div class="item">
+    <img class="ui avatar image"
+        src="{{experience.logoUrl}}">
+    <div class="content">
+        <div class="description normal-text">{{experience.position}}
+            <div class="ui list">
+                <div class="item">
+                    <div class="content">
+                        <p class="normal-text">ceva</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
