updated the project page

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -2,7 +2,7 @@
     <div class="row sixteen wide column">
         <div class="column">
             <h1 class="header-text " style="margin-bottom: 50px;">
-                <typing [word]="title" [speed]="speed" [id]="title" (ready)="showContent(ready)"></typing>
+                {{title}}
             </h1>
         </div>
     </div>
