--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,8 +1,14 @@
-<a *ngIf="project?.description?.length > 25" class="ui card" href="{{project.html_url}}">
-  <div class="content project">
-    <div class="header" style="word-wrap: break-word;">{{getNameOf(project)}}</div>
-    <div class="description">
-      <p>{{project.description.substring(0, 60) + '...'}}</p>
-    </div>
+<div class="ui card">
+  <div class="blurring dimmable image">
+    <img src="../../../assets/images/chip.png">
   </div>
-</a>
+  <div class="content" style="height: 125px;">
+    <a class="header">{{getNameOf(project)}}</a>
+  </div>
+  <div class="extra content">
+    <a href="{{project.html_url}}"> 
+      <i class="github icon"></i>
+      See details
+    </a>
+  </div>
+</div>
