updated the links

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,6 +1,6 @@
 <div class="ui card">
   <div class="blurring dimmable image">
-    <img src="https://github.com/RusuGabriel/Webpage/blob/master/src/assets/images/chip.png">
+    <img src="https://raw.githubusercontent.com/RusuGabriel/Webpage/master/src/assets/images/chip.png">
   </div>
   <div class="content" style="height: 125px;">
     <a class="header">{{getNameOf(project)}}</a>
