update: added the resume page

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -23,9 +23,8 @@
     <div class="row">
         <div class="four three wide column"></div>
         <div class="four three wide column">
-            <a class="inverted" routerLink="/projects">Projects</a>
-            <a style="padding: 10px;" class="inverted" routerLink="/experience">Experience</a>
-            <a class="inverted" routerLink="/education">Education</a>
+            <a style="padding: 15px;" class="inverted" routerLink="/projects">Projects</a>
+            <a style="padding: 15px;" class="inverted" routerLink="/resume">Résumé</a>
         </div>
         <div class="four three wide column"></div>
     </div>
