--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,18 +1,26 @@
 <div class="ui one column grid">
-    <div class="row sixteen wide column">
-        <div class="column">
-            <h1 class="header-text " style="margin-bottom: 50px;">
-                {{title}}
-            </h1>
-        </div>
+  <div class="row sixteen wide column">
+    <div class="column">
+      <h1 class="header-text " style="margin-bottom: 50px;">
+        {{title}}
+      </h1>
     </div>
+  </div>
+</div>
+<div *ngIf="!ready">
+  <div class="ui active dimmer">
+    <div class="ui indeterminate text loader">Loading Projects</div>
+  </div>
+  <p></p>
 </div>
 <div *ngIf="ready">
-    <div class="container center aligned">
-        <div class="sixteen wide column">
-            <div class="ui cards ">
-                <project *ngFor="let project of projects" [project]="project"></project>
-            </div>
-        </div>
+  <div class="container center aligned">
+    <div class="sixteen wide column">
+      <div class="ui cards ">
+        <project *ngFor="let project of projects" [project]="project"></project>
+      </div>
     </div>
+  </div>
 </div>
+
+
