update: added new records in the experience section

--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -7,3 +7,6 @@
     </div>
   </div>
 </div>
+<div class="ui items">
+  <experience *ngFor="let xp of experience" [experience]="xp"></experience>
+</div>
