--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,15 +1,27 @@
+<!--<div class="item">-->
+<!--  <img class="ui avatar image"-->
+<!--       src="{{experience.logoUrl}}">-->
+<!--  <div class="content">-->
+<!--    <div class="description normal-text">{{experience.position}}-->
+<!--      <div class="ui list">-->
+<!--        <div class="item">-->
+<!--          <div class="content">-->
+<!--            <p class="normal-text">descriere</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
 <div class="item">
-  <img class="ui avatar image"
-       src="{{experience.logoUrl}}">
+  <div class="ui small image">
+    <img src="{{experience.logoUrl}}">
+  </div>
   <div class="content">
-    <div class="description normal-text">{{experience.position}}
-      <div class="ui list">
-        <div class="item">
-          <div class="content">
-            <p class="normal-text">descriere</p>
-          </div>
-        </div>
-      </div>
+    <div class="header">Arrowhead Valley Camp</div>
+    <div class="description">
+      <p>This is the description</p>
     </div>
   </div>
 </div>
