--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -7,6 +7,8 @@
     </div>
   </div>
 </div>
-<div class="ui items">
-  <experience *ngFor="let xp of experience" [experience]="xp"></experience>
+
+<div class="ui divided items">
+  <experience class="full-width" *ngFor="let xp of experience" [experience]="xp"></experience>
 </div>
+
