fix: fixed the missing bullet points bug

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <ul class="ui list left-align">
-        <li *ngFor="let bullet of experience.bulletDetails"></li>
+        <li *ngFor="let bullet of experience.bulletDetails">{{bullet}}</li>
       </ul>
     </div>
   </div>
