--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 </div>
-
+<p class="normal-text left-align">Experience:</p>
 <div class="ui divided items">
   <experience class="full-width" *ngFor="let xp of experience" [experience]="xp"></experience>
 </div>
