--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -17,7 +17,7 @@
   <div class="container center aligned">
     <div class="sixteen wide column">
       <div class="ui cards ">
-        <project *ngFor="let project of projects" [project]="project"></project>a
+        <project *ngFor="let project of projects" [project]="project"></project>
       </div>
     </div>
   </div>
