fix: fixed some typo's

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -3,7 +3,7 @@
     <img src="https://raw.githubusercontent.com/RusuGabriel/Webpage/master/src/assets/images/chip.png">
   </div>
   <div class="content" style="height: 125px;">
-    <a class="header">{{getNameOf(project)}}</a>
+    <p class="header">{{getNameOf(project)}}</p>
   </div>
   <div class="extra content">
     <a href="{{project.html_url}}">
