update: updated the experience component

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -3,7 +3,9 @@
     <img src="{{experience.logoUrl}}">
   </div>
   <div class="content">
-    <div class="header left-align" style="font-size: 1.1em;"><p style="display: inline-block;">{{experience.position}}</p></div>
+    <div class="header left-align" style="font-size: 1.1em;">
+      <p class="same-line">{{experience.position}}</p>
+    </div>
     <div class="meta left-align" style=" font-size: 0.9em;">
       <p>{{experience.companyName}}</p>
     </div>
