--- a/src/styles.css
+++ b/src/styles.css
@@ -132,10 +132,10 @@ span {
 .same-line{
   display: inline-block;
 }
-/*
-.spacing {
 
-  /* width: 300px;
-  border: 3px solid #73AD21;
-  padding: 10px; */
-/* } */
+.root {
+  min-width: 100%;
+  min-height: 100%;
+  height: 100%;
+  max-height: 100%;
+}
