update: added the loading screen in the resume page & created the education config file

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -14,7 +14,7 @@
         <div class="ui inverted list">
           <div class="item">
             <div class="content">
-              {{this.getPeriodOfTime()}}
+              <i class="icon calendar alternate outline inverted"></i>{{this.getPeriodOfTime()}}
             </div>
           </div>
         </div>
