--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -7,6 +7,13 @@
     </div>
   </div>
 </div>
+
+<div *ngIf="!ready">
+  <div class="ui active dimmer">
+    <div class="ui indeterminate text loader">Loading Résumé details</div>
+  </div>
+  <p></p>
+</div>
 <p class="normal-text left-align">Experience:</p>
 <div class="ui divided items">
   <experience class="full-width" *ngFor="let xp of experience" [experience]="xp"></experience>
